# islamic-os-lib

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/adhansys/: config.rs  methods.rs  mod.rs  patched_methods.rs  qiblah.rs  times.rs  unit_salah.rs
