[package]
name = "islamic-os-lib"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A library for IslamicOS, including a multi-purpose CLI"
repository = "https://github.com/Islamic-OS/islamic-os-lib"
readme = "README.md"
keywords = ["library", "cli", "islamicos"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salah = "0.7.0"
toml = "0.5.9"
chrono = "0.4.22"
colored = "2.0.0"
inquire = "0.6.1"
clearscreen = "2.0.1"
serde_derive = "1.0.160"
home = "0.5.5"
rusty-leveldb = "1.0.6"
reqwest = { version = "0.11.17", features = ["json"] }
serde_json = "1.0.86"
tokio = { version = "1.28.0", features = ["full"] }
serde = "1.0.160"

[[bin]]
name = "islamic-cli"
path = "src/bin/main.rs"
